WNYC-163 fix grid layout on Safari

--- a/app/styles/_library/components/_whats-on.scss
+++ b/app/styles/_library/components/_whats-on.scss
@@ -58,8 +58,8 @@
     @include media(">=medium") {
       align-items: flex-start;
       display: grid;
-      grid-template-columns: 200px auto;
-      grid-template-rows: auto auto auto;
+      grid-template-columns: 200px 1fr;
+      grid-template-rows: auto auto 1fr;
     }
 
     .on-air-image {
